--- a/ai_2048/app/src/main/res/layout/activity_main_game.xml
+++ b/ai_2048/app/src/main/res/layout/activity_main_game.xml
@@ -22,13 +22,28 @@
             android:layout_height="wrap_content" />
     </RelativeLayout>
 
-    <TextView
-        android:id="@+id/tv_score"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="@dimen/margin_between_contents"
+    <RelativeLayout
         android:layout_below="@id/rl_bar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/margin_whole_screen"
+        android:layout_marginRight="@dimen/margin_whole_screen">
+        <ImageButton
+            android:id="@+id/ib_refresh"
+            android:src="@drawable/ic_refresh_white_24dp"
+            android:layout_width="@dimen/size_touchable"
+            android:layout_height="@dimen/size_touchable"
+            android:background="@drawable/bg_button"
+            android:layout_alignParentStart="true"/>
+        <TextView
+            android:id="@+id/tv_score"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:layout_marginTop="@dimen/margin_between_contents"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+    </RelativeLayout>
+
 
     <!--<com.lyk.ai_2048.component.Grid-->
         <!--android:id="@+id/gl_main"-->
