--- a/ai_2048/app/src/main/res/drawable/bg_0.xml
+++ b/ai_2048/app/src/main/res/drawable/bg_0.xml
@@ -1,7 +1,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@color/color_2" />
+    <solid android:color="@android:color/transparent" />
     <corners
         android:bottomLeftRadius="8dp"
         android:bottomRightRadius="8dp"
