--- a/ai_2048/app/src/main/res/values/colors.xml
+++ b/ai_2048/app/src/main/res/values/colors.xml
@@ -3,4 +3,23 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+
+    <color name="color_special_number">#776e65</color>
+
+    <color name="color_2">#eee4da</color>
+    <color name="color_4">#ede0c8</color>
+    <color name="color_8">#f2b179</color>
+    <color name="color_16">#f59563</color>
+    <color name="color_32">#f67c5f</color>
+    <color name="color_64">#f65e3b</color>
+    <color name="color_128">#edcf72</color>
+    <color name="color_256">#edcc61</color>
+    <color name="color_512">#9c0</color>
+    <color name="color_1024">#33b5e5</color>
+    <color name="color_2048">#09c</color>
+    <color name="color_4096">#a6c</color>
+    <color name="color_8192">#93c</color>
+
+    <color name="color_grid">#bbada0</color>
+    <color name="color_cell">#ccc0b3</color>
 </resources>
