--- a/ai_2048/app/src/main/res/layout/activity_main_game.xml
+++ b/ai_2048/app/src/main/res/layout/activity_main_game.xml
@@ -25,9 +25,7 @@
     <RelativeLayout
         android:layout_below="@id/rl_bar"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/margin_whole_screen"
-        android:layout_marginRight="@dimen/margin_whole_screen">
+        android:layout_height="wrap_content">
         <ImageButton
             android:id="@+id/ib_refresh"
             android:src="@drawable/ic_refresh_white_24dp"
@@ -42,6 +40,13 @@
             android:layout_marginTop="@dimen/margin_between_contents"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
+        <ImageButton
+            android:id="@+id/ib_undo"
+            android:src="@drawable/ic_undo_white_24dp"
+            android:layout_width="@dimen/size_touchable"
+            android:layout_height="@dimen/size_touchable"
+            android:background="@drawable/bg_button"
+            android:layout_alignParentEnd="true"/>
     </RelativeLayout>
 
 
