--- a/ai_2048/app/src/main/res/layout/activity_main_game.xml
+++ b/ai_2048/app/src/main/res/layout/activity_main_game.xml
@@ -7,7 +7,8 @@
     android:orientation="vertical" 
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:keepScreenOn="true">
+    android:keepScreenOn="true"
+    android:background="@color/color_bg">
     
     <RelativeLayout
         android:id="@+id/rl_bar"
@@ -18,7 +19,7 @@
             android:id="@+id/tv_title"
             android:textSize="25sp"
             android:layout_centerInParent="true"
-            android:textColor="@color/md_red_200"
+            android:textColor="@color/color_theme"
             android:text="@string/title_player_mode"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
@@ -52,7 +53,7 @@
                 android:textSize="15sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/md_red_200"/>
+                android:textColor="@color/color_theme"/>
 
         </LinearLayout>
         <ImageButton
