--- a/ai_2048/app/src/main/res/drawable/bg_otherwise.xml
+++ b/ai_2048/app/src/main/res/drawable/bg_otherwise.xml
@@ -1,7 +1,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="@color/md_black_1000" />
+    <solid android:color="@color/color_others" />
     <corners
         android:bottomLeftRadius="8dp"
         android:bottomRightRadius="8dp"
