--- a/ai_2048/app/src/main/res/layout/activity_main_game.xml
+++ b/ai_2048/app/src/main/res/layout/activity_main_game.xml
@@ -36,34 +36,6 @@
             android:layout_height="@dimen/size_touchable"
             android:background="@drawable/bg_button"
             android:layout_alignParentStart="true"/>
-        <LinearLayout
-            android:layout_centerInParent="true"
-            android:id="@+id/ll_score"
-            android:orientation="horizontal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-            <TextView
-                android:id="@+id/tv_score_tag"
-                android:textSize="15sp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/tag_score"
-                android:layout_marginEnd="@dimen/margin_between_contents"/>
-            <TextView
-                android:id="@+id/tv_score"
-                android:textSize="15sp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textColor="@color/color_theme"/>
-        </LinearLayout>
-        <TextView
-            android:id="@+id/tv_score_change"
-            android:layout_marginStart="@dimen/margin_between_contents"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:textColor="@color/color_theme"
-            android:layout_toEndOf="@id/ll_score"/>
         <ImageButton
             android:id="@+id/ib_undo"
             android:src="@drawable/ic_undo_white_24dp"
@@ -71,6 +43,73 @@
             android:layout_height="@dimen/size_touchable"
             android:background="@drawable/bg_button"
             android:layout_alignParentEnd="true"/>
+        <RelativeLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true">
+            <LinearLayout
+                android:layout_centerHorizontal="true"
+                android:id="@+id/ll_score"
+                android:orientation="horizontal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:id="@+id/tv_score_tag"
+                    android:textSize="15sp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/tag_score"
+                    android:layout_marginEnd="@dimen/margin_between_contents"/>
+                <TextView
+                    android:id="@+id/tv_score"
+                    android:textSize="15sp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/color_theme" />
+            </LinearLayout>
+            <TextView
+                android:id="@+id/tv_score_change"
+                android:layout_marginStart="@dimen/margin_between_contents"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:textColor="@color/color_theme"
+                android:layout_toEndOf="@id/ll_score"
+                android:layout_alignBottom="@id/ll_score"/>
+
+            <LinearLayout
+                android:layout_centerHorizontal="true"
+                android:id="@+id/ll_high_score"
+                android:orientation="horizontal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/ll_score">
+                <TextView
+                    android:id="@+id/tv_high_score_tag"
+                    android:textSize="15sp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/tag_high_score"
+                    android:layout_marginEnd="@dimen/margin_between_contents"/>
+                <TextView
+                    android:id="@+id/tv_high_score"
+                    android:textSize="15sp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/color_theme"/>
+            </LinearLayout>
+            <TextView
+                android:id="@+id/tv_high_score_change"
+                android:layout_marginStart="@dimen/margin_between_contents"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:textColor="@color/color_theme"
+                android:layout_toEndOf="@id/ll_high_score"
+                android:layout_alignBottom="@id/ll_high_score"/>
+        </RelativeLayout>
+
+
     </RelativeLayout>
 
     <RelativeLayout
