basic settings setup

--- a/ai_2048/app/src/main/res/layout/activity_main_game.xml
+++ b/ai_2048/app/src/main/res/layout/activity_main_game.xml
@@ -118,12 +118,12 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true">
         <ImageButton
-            android:id="@+id/ib_like"
+            android:id="@+id/ib_setting"
             android:layout_width="@dimen/size_touchable"
             android:layout_height="@dimen/size_touchable"
             android:background="@drawable/bg_button"
             android:layout_alignParentStart="true"
-            android:src="@drawable/ic_thumb_up_white_24dp"/>
+            android:src="@drawable/ic_settings_white_24dp"/>
 
         <ImageButton
             android:id="@+id/ib_help"
