--- a/ai_2048/app/src/main/res/values/dimens.xml
+++ b/ai_2048/app/src/main/res/values/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="margin_between_contents">8dp</dimen>
     <dimen name="margin_whole_screen">16dp</dimen>
     <dimen name="size_touchable">48dp</dimen>
+    <dimen name="size_touchable_small">36dp</dimen>
 </resources>
