--- a/ai_2048/app/src/main/res/layout/activity_settings.xml
+++ b/ai_2048/app/src/main/res/layout/activity_settings.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:id="@+id/rl_main"
-    android:padding="@dimen/margin_whole_screen"
+    android:paddingTop="@dimen/margin_whole_screen"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -29,7 +29,9 @@
         android:layout_below="@+id/rl_title_bar"
         android:layout_marginTop="@dimen/margin_between_contents"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/margin_whole_screen"
+        android:layout_marginRight="@dimen/margin_whole_screen">
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
@@ -55,7 +57,24 @@
     </RelativeLayout>
 
     <RelativeLayout
+        android:id="@+id/rl_banner"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:background="@color/color_theme">
+        <com.google.android.gms.ads.AdView
+            android:id="@+id/adView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            ads:adSize="BANNER"
+            ads:adUnitId="@string/banner_setting_footer">
+        </com.google.android.gms.ads.AdView>
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_above="@id/rl_banner"
+        android:layout_marginBottom="@dimen/margin_whole_screen"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
         <ImageButton
